force-app/main/default/objects/B2BAccountSettings__c/B2BAccountSettings__c.object-meta.xml
<CustomObject>
    <label>B2B Account Settings</label>
    <nameField>
        <label>B2B Account Settings</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Account Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>