force-app/main/default/objects/B2BAccountSettings__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>B2B Account Settings</relationshipLabel>
    <relationshipName>B2B_Account_Settings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>