force-app/main/default/objects/B2BAccountSettings__c/fields/CreditCardAllowed__c.field-meta.xml
<CustomField>
    <fullName>CreditCardAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Allowed</label>
    <type>Checkbox</type>
</CustomField>