force-app/main/default/objects/B2BAccountSettings__c/fields/CreditCardSurcharge__c.field-meta.xml
<CustomField>
    <fullName>CreditCardSurcharge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>%Credit Card Surcharge</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>