force-app/main/default/objects/B2BAccountSettings__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>B2B Market</label>
    <referenceTo>B2BMarketSettings__c</referenceTo>
    <relationshipLabel>B2B Account Settings</relationshipLabel>
    <relationshipName>B2B_Account_Settings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>