force-app/main/default/objects/B2BAccountSettings__c/fields/NotifyOrderTo__c.field-meta.xml
<CustomField>
    <fullName>NotifyOrderTo__c</fullName>
    <label>Notify Order To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>CUSTOMER</fullName>
            </value>
            <value>
                <fullName>REP</fullName>
            </value>
            <value>
                <fullName>BOTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>