force-app/main/default/objects/B2BAccountSettings__c/fields/PricingMode__c.field-meta.xml
<CustomField>
    <fullName>PricingMode__c</fullName>
    <label>Pricing Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIVE</fullName>
                <label>Display prices</label>
            </value>
            <value>
                <fullName>DEFERRED</fullName>
                <label>Get prices at checkout</label>
            </value>
            <value>
                <fullName>HIDDEN</fullName>
                <label>Do not display prices</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>