force-app/main/default/objects/B2BAccountSettings__c/fields/SalesOrgId__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Org</label>
    <referenceTo>Sales_Org__c</referenceTo>
    <relationshipLabel>B2B Account Settings</relationshipLabel>
    <relationshipName>B2B_Account_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>