force-app/main/default/objects/B2BAccountSettings__c/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <label>Store Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US DEALERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>