force-app/main/default/objects/B2BAccountSettings__c/validationRules/Sales_org_required_if_not_direct_custome.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_org_required_if_not_direct_custome</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( ISPICKVAL(Market__r.CheckoutMode__c, &quot;FACTORY&quot;) ),
    ISBLANK(SalesOrgId__c)
)</errorConditionFormula>
    <errorMessage>Sales Organization is required for non-factory customer accounts.</errorMessage>
</ValidationRule>